fix for fdo#57551: landscape/portrait sequence lost in FILESAVE as .doc

Change-Id: I4d888fc7e9b68ee4c693b565d8ef23dcb825f7ce